--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
         <script src="./assests/script/index.js" defer></script>
     </head>
     <body>
-        
+        <header></header>
+        <main>
+            <div class="container">
+                <div class="container-clock">
+                    <div id="clock"></div>
+                    <p><i class="fa-solid fa-bell"></i><span></span></p>
+                    <form id="alarm-form">
+                        <input type="text" name="time" id="alarm-input" placeholder="hh:mm" maxlength="5">
+                        <button type="submit" id="button">Set Alarm</button>
+                    </form>
+                    <div id="alarm-indicator"></div>
+                </div>
+            </div>
+        </main>
+        <footer></footer>
     </body>
 </html> 
