Developing alarm Clock

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
             <div class="container">
                 <div class="container-clock">
                     <div id="clock"></div>
-                    <p><i class="fa-solid fa-bell"></i><span></span></p>
+                    <p><i class="fa-solid fa-bell"></i><span class="txt"></span></p>
                     <form id="alarm-form">
                         <input type="text" name="time" id="alarm-input" placeholder="hh:mm" maxlength="5">
                         <button type="submit" id="button">Set Alarm</button>
                     </form>
-                    <div id="alarm-indicator"></div>
                 </div>
             </div>
         </main>
