--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="description" content="alarm clock">
         <meta name="keywords" content="html, css, web, web development, seo">
         <title>Alarm Clock</title>
-        <link rel="shorcut icon" href="./assests/image/alarm-clock.png" type="image/S-icon">
+        <link rel="shorcut icon" href="./assets/image/alarm-clock.png" type="image/S-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./assests/style/index.css" media="all">
-        <script src="./assests/script/index.js" defer></script>
+        <link rel="stylesheet" href="./assets/style/index.css" media="all">
+        <script src="./assets/script/index.js" defer></script>
     </head>
     <body>
         <header></header>
